[package]
name = "AudioTest"
version = "0.1.0"
authors = ["George Atkinson <geomyles@yahoo.co.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cpal = "0.13.1"
anyhow = "*"
# baseview = {git = "https://github.com/RustAudio/baseview"}
tuix = { git = "https://github.com/geom3trik/tuix", branch = "develop_bv" }
crossbeam-channel = "0.5.0"
glutin = "*"
femtovg = {git = "https://github.com/femtovg/femtovg"}